# monolith

./: .gitignore  Cargo.toml  example.deno.js  presentation.src.md  readme.md  test.cmd
.env/: .rc  cache-refresh-v8.sh
cli-monolith-db/: Cargo.toml
cli-monolith-db/src/: main.rs
deno-monolith-db/: Cargo.toml
deno-monolith-db/src/: main.rs  runtime.deno.js
lib-monolith-db/: Cargo.toml
lib-monolith-db/src/: index.rs  lib.rs  monolith.rs  record.rs
monolith-db/: Cargo.toml  __build.rs
monolith-db/src/: index.rs  lib.rs  monolith.rs  record.rs
src/: main.rs  monolith.rs  record.rs
