[package]
name = "cli-monolith-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="cli-monolith-db"
path="src/main.rs"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
deno_core = "0.170.0"
tokio = { version = "1.25.0", features = ["full"] }
monolith_db = {path= "../monolith-db" }
# v8 = "0.62.2"
