[package]
name = "monolith_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
deno_core = "0.170.0"
#base64 = "0.21.0"
#csv = "1.1.6"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sha256 = "1.1.1"
tokio = { version = "1.25.0", features = ["full"] }
# v8 = "0.62.2"
